popup for edenter

--- a/app/views/curriculums/business_english.html.erb
+++ b/app/views/curriculums/business_english.html.erb
@@ -2184,11 +2184,63 @@ linkslinkslinks -->
         <blockquote>
                 <p>estimate</p>
                 <small>Approximation, prediction, or projection of a quantity based on</small>
-        </blockquote><br><br>
+        </blockquote><br>
+        <img src="https://lh3.googleusercontent.com/dtnQmukG3bktb1OL71vQVS5QS84IljP0hwq5_bAyBD2UPq4SpWYCSIQ3IzkWutnDXIJ4oPDkOJZHSLqAUj9Sk3IRQ76eWxfv8Pb3GESCOBxVej71r_mMpNPO-yqAwr7xEhbulqRF" width="50%"><br><br>
+
+        <h3>Key Phrases</h3>
+        <br><p>Let the student practice the phrases below:</p><br>
+        <strong>Introductions:</strong><br><br>
+
+        <p>I’d like to introduce...from…? <br>
+          Nice to meet you. <br>
+          Please, call me... <br>
+          Fine, and I’m….. <br>
+          This is my colleague. <br>
+          Pleased to meet you too. <br>
+          I see you’ve met ...already <br>
+
+        </p><br>
 
 
-        </blockquote><br> 
-        <img src="https://lh4.googleusercontent.com/MGHno_UBaaJQK61zgDRAtv_iLrlpL62Igx0CfGoh-XdLkBsDN1ofcpfdB_8FIaFKuA16_97OH5ujPUDkZxy-fWly7_t4to8hLrLHt5gMoIJJWE-0XZ4k9AuqubMkKNVa_oJ--7hY" width="50%"><br><br>
+        <strong>Put the words in the sentences into the correct order.</strong><br><br>
+
+        <p>1. to John meet Nice you <br>
+          2. is Mark colleage, This Kennedy my <br>
+          3. meet to you Nice too <br>
+          4. Carter see you’ve already my manager I John met. <br>
+          5. Ms to meet you, Please Goodman <br>
+          6. Jasmine me call Please <br></p>
+
+        <h3>Language Tip</h3><br>
+        <p>Always check that visitors have been introduced to everybody in the room. Notice how Mark does this with And I see you’ve met my assistant Brian already.</p><br><br>
+
+
+        <em>Complete the sentence: </em><br><br>
+
+        <p>1. Fine. And _______ Luke. <br>
+          2. I see you’ve met Brian______. <br>
+          3. This ______ my _______John. <br>
+          4. Nice to meet you_______. <br>
+          5. I’d __________ to ________ John Weber from ______. <br>
+          6. Please ______ me Luke. <br>
+        </p>
+
+        <strong>Put the sentences into the correct order to make conversation.</strong><br><br>
+
+        <strong>Mr. Kline (MK): </strong>Ok, but it was a bit late taking off. [__] <br>
+        <strong>Diane (D): </strong>Nice to meet you, Mr. Kline [__] <br>
+        <strong>NK: </strong>Nice to meet you too. But please call me Mike. [__] <br>
+        <strong>Jasmine (J): </strong>Diane, can I introduce you to Mr. Kline? [__] <br>
+        <strong>MK: </strong>Thank you. [__] <br>
+        <strong>MK: </strong>No, thanks. [__] <br>
+        <strong>D: </strong>So how was your flight? [__] <br>
+        <strong>D: </strong>And would you like some coffee? [__] <br>
+        <strong>D: </strong>Of course. And I’m Diane. Would you like to take a seat? [__] <br><br>
+
+        <h3>Identifying Sentence Faults</h3><br>
+        <img src="https://docs.google.com/drawings/d/sQPKL7ouxS1x-hRi1GMQrjQ/image?w=806&h=259&rev=10&ac=1" width="50%"><br><br>
+        <img src="https://lh6.googleusercontent.com/h6mv6Lf8rqMr1qbCfZLXag8_wOrcJK7MvgqJ7JrKbEK1N_0fwLsfFf_TBj0lqt0y6WacJFbLzLEODZGEnFfUQYj2QEqUpYRE-TLBwxMhYnFW_38n9FD3PhUr6fh9yO5ZA1QmErjP" width="50%"><br><br>
+
 
 
 
@@ -2201,6 +2253,117 @@ linkslinkslinks -->
             <button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#business14">Close</button><br>
             <hr>
          </div>
+
+
+         <br><p>Company Visits   <button type="button" class="btn btn-info pull-right" data-toggle="collapse" data-target="#business15">Show contents</button></p>
+          <div id="business15" class="collapse"><br>
+
+            <strong>Speaking Matters</strong><br><br>
+            <strong>Follow along with the dialogue below as John Weber and his secretary meets with the client’s secretary.</strong><br><br>
+            <img src="https://lh4.googleusercontent.com/ZBGTfK81iQ270rGKn4bKLx3-frEbig8n6lMcZ-b1V1rwWo40JUPMuwHezeNuBKISEcgWv72sSsESpBmlYxLkfYjUierWTPLd-SGSwUBUxG9gPSBOUyqJkcR_y27OMKeuZR-TTk4F" width="50%"><br><br>
+
+            <strong>Brian (B): </strong>Excuse me, are you John Weber and Luke Myers? <br>
+            <strong>John (J): </strong>Yes, we are. I’m John Weber and this is my colleague Luke Myers. <br>
+            <strong>B: </strong>Hello, I’m Brian Kurt , Mr. Thomas’s apprentice. <br>
+            <strong>J: </strong>Please to meet you Brian. <br>
+            <strong>Luke (L): </strong>Good morning. <br>
+            <strong>B: </strong>Mr. Mark Thomas asked me to meet you. Welcome to Louisiana Textile Industries Inc. <br>
+            <strong>J: </strong>Thank you. <br>
+            <strong>L: </strong>Thank you. <br>
+            <strong>B: </strong>Come this way ,please. We need to take the elevator to the 3rd floor. <br>
+            <strong>J: </strong>It’s a great building. <br>
+            <strong>B: </strong>Yes, it’s a nice place to work. <br>
+            <strong>J: </strong>Where can we set-up the product models for the business proposal meeting? <br>
+            <strong>B: </strong>We have prepared the loft for you. <br>
+            <strong>J: </strong>Sounds great thanks. <br><br>
+
+            <strong>QUESTIONS: </strong><br><br>
+
+            <p>1. Do John and Luke know Brian already? <br>
+              2. Does Brian work at Louisiana Textile Industries Inc.? <br>
+              3. Do they need to take the elevator? <br>
+              4. Does Brian like where he works? <br></p><br>
+
+
+            <h3>Vocabulary Mattters</h3><br>
+            <em>Use the words below in a sentence:</em><br><br>
+
+        <blockquote>
+                <p>Elevator</p>
+                <small>compartment housed in a shaft for raising and lowering people or things to different floors or levels</small>
+        </blockquote><br> 
+        <img src="https://lh4.googleusercontent.com/uer0YpxRQjt2f_YkbDj2d_yzWYgEHHaCS9etOz5CEBtliF-MyAb7t0VmNdFd6wsaBcfgOm35ibiDmaYxB-tSOHHePCJxFLh9GwY5IhqrMJ4vO88qVO5TvqvQOL_WVmKrhDAoUQNm" width="30%"><br><br>     
+
+        <blockquote>
+                <p>Industries</p>
+                <small>The manufacturing or technically productive enterprises in a particular field, country, region, or economy viewed collectively, or one of these individually.</small>
+        </blockquote><br> 
+        <img src="https://lh5.googleusercontent.com/mPGS9RSc9U30A1TMJuEqqs1slilQhIDgw-CifUZy4eugIit2aBAZRK6L6dll2Wfaq_O9UN092BfDlHY9P2CDRHFt9QzgLcMQgLvqPTlRAnqf2ZxJkjNzfd9lVJY25Wh9Z2Z6t_-D" width="30%"><br><br>     
+
+        <blockquote>
+                <p>Apprentice</p>
+                <small>a person who is learning a trade from a skilled employer, having agreed to work for a fixed period at low wages.</small>
+        </blockquote><br> 
+        <img src="https://lh4.googleusercontent.com/yXOYvO4HHglhmVIxghovKtHLL_NHo09UOdaLqkgCkxnV4sirj05OMJ1xGhW8j2KdunJf0NVhUtNm6dhqei8ZpJTs7HtliPGwBE_KL_eW7sLCkM9ZHn6YZcSheDhJSO6P9lYE_SWK" width="30%"><br><br>     
+
+        <blockquote>
+                <p>Textile</p>
+                <small>A type of material composed of natural or synthetic fibers. Types of textiles include animal-based material such as wool or silk, <br> plant-based material such as linen and cotton, and synthetic material such as polyester and rayon. Textiles are often associated with <br> the production of clothing.</small>
+        </blockquote><br> 
+        <img src="https://lh4.googleusercontent.com/wWggLY9tLKMHCV2A9SNkmrcgMBxaXUxnzj0GHXA_05jsX8Vff4JJTZjY-jWuhOEjJKg2MDGEWbW4UxWdL2JKlIj_lFIA-sHa726U-WkN5I1Dizhiox-u9eacxqtoMO8ZJ-gPtA6z" width="30%"><br><br>
+
+
+        <blockquote>
+                <p>business proposal</p>
+                <small>written offer from a seller to a prospective buyer.</small>
+        </blockquote><br> 
+        <img src="https://lh6.googleusercontent.com/9CKyyK11dO2jyiOSr_SzI5CVlxTXK_Dd9R_qtsT8Moiu7RKoBTz5k69hNTLCNBkcby4KuZltg1Xnby8RAc29bdI6qXHj5Wklo-gwyhq9UHBu5MhCrRS7eC-r_yQBp7VDzcksIGgM" width="30%"><br><br>
+
+
+        <h3>Key Phrases</h3>
+
+        <strong>Join the two parts of the sentence together.</strong><br><br>
+
+
+        <div class="row">
+          <div class="col-md-6">
+            <p>1. Excuse me, <br>
+              2. I’m John and <br>
+              3. Mr. Mark Thomas asked <br>
+              4. Come this way, <br>
+              5. Welcome <br>
+              6. We need to <br></p>
+          </div>
+          <div class="col-md-6">
+            <p>A. to our company. <br>
+              B. take the stairs to the 1st floor. <br>
+              C. are you John Weber? <br>
+              D. this is Luke. <br>
+              E. me to meet you. <br>
+              F. please <br></p>
+          </div>
+        </div><br><br>
+
+        <strong>Put the words in the sentences into a correct order.</strong><br><br>
+
+        <p>1. is my this John Weber I’m and colleague, Luke Myers. <br>
+          2. floor We to take need the to elevator the 3rd. <br>
+          3. John  me, Excuse are Mr. you. <br>
+          4. way, Come this please. <br>
+          5. to Thomas me asked Mr.meet you. <br></p>
+
+
+
+           <br>
+            <hr>
+            <!-- close close -->
+            <!-- close close -->
+            <!-- close close -->
+            <br>
+            <button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#business15">Close</button><br>
+            <hr>
+         </div>           
+
 
 
 
