--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -127,7 +127,7 @@
         </div>
 
         <div class="col-md-4 col-xs-6">
-          <label for="role_playing"><img src="../../role_playing.png" class="img img-responsive center-block" style="width: 50px;"><input type="radio" id="role_playing" name = "user[topic]" value="Role Playing">&nbsp;なりきり英会話</label>
+          <label for="role_playing"><img src="../../free_conversation.png" class="img img-responsive center-block" style="width: 50px;"><input type="radio" id="role_playing" name = "user[topic]" value="Free Conversation">&nbsp;なりきり英会話</label>
         </div>
 
         <div class="col-md-4 col-xs-6">
