--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -17,7 +17,9 @@
 		<!--student-->
 		<!--student-->
 		<div class="container" style="padding:0 3% 0 3%;">
-			<h2 style=" font-family: 'Work Sans', sans-serif;" class="text-center"><i class="fa fa-question-circle btn btn-danger" data-toggle="modal" data-target="#welcome">使い方</i><br>Teachers <span style="font-size:6px; font-family: ten-mincho, serif; font-style: normal; font-weight: 100;">『今』空いてる先生</span></h2>
+<!-- 			<h2 style=" font-family: 'Work Sans', sans-serif;" class="text-center"><i class="fa fa-question-circle btn btn-danger" data-toggle="modal" data-target="#welcome">使い方</i><i class="fa fa-signal btn btn-info" style="margin-left: 10px;" data-toggle="modal" data-target="#request">教師を依頼する</i><br>Teachers <span style="font-size:6px; font-family: ten-mincho, serif; font-style: normal; font-weight: 100;">『今』空いてる先生</span></h2> -->
+
+      <h2 style=" font-family: 'Work Sans', sans-serif;" class="text-center"><i class="fa fa-question-circle btn btn-danger" data-toggle="modal" data-target="#welcome">使い方</i><br>Teachers <span style="font-size:6px; font-family: ten-mincho, serif; font-style: normal; font-weight: 100;">『今』空いてる先生</span></h2>
 		<!--<h4 style="font-size:15px;">Let's buy teacher's TIME !!</h4>-->
 		        <div class="content">
 						<div class="grid" style=" text-align: center;
@@ -111,7 +113,7 @@
     });
 </script> -->
 
-  <!-- Modal -->
+  <!-- Modal Instruction -->
   <div class="modal fade" id="welcome" role="dialog">
     <div class="modal-dialog modal-lg">
     
@@ -146,7 +148,34 @@
     </div>
   </div>
 
+ <!-- Modal Instruction -->
+  <div class="modal fade" id="request" role="dialog">
+    <div class="modal-dialog modal-lg">
+    
+      <!-- Modal content-->
 
+      <div class="modal-content">
+        <div class="modal-header">
+          <h3 class="modal-title text-center">Request for Teacher</h3>
+        </div>
+        <div class="modal-body">
+
+          <h4 class="text-center">We are now requesting a teacher for you!</h4>
+          <h3 class="text-center">Notifying all teachers. Please wait.....</h3>
+          <%= @all_teachers.count %>
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped active" role="progressbar"
+            aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
+             80%
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">          
+          <button type="submit" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 <!-- Modal Test -->
 
