--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,6 +7,64 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
+
+<script>
+
+  function statusChangeCallback(response) {
+    
+    if (response.status === 'connected') {
+
+      SignIn();
+
+    } else {
+
+
+    }
+  }
+
+  function checkLoginState() {
+    FB.getLoginStatus(function(response) {
+      statusChangeCallback(response);
+      SignIn();
+    });
+  }
+
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '263462597523022',
+      cookie     : true,  // enable cookies to allow the server to access 
+                          // the session
+      xfbml      : true,  // parse social plugins on this page
+      version    : 'v2.8' // use graph api version 2.8
+    });
+
+    FB.getLoginStatus(function(response) {
+      statusChangeCallback(response);
+    });
+
+  };
+
+  (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = "https://connect.facebook.net/en_US/sdk.js";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+
+
+  function SignIn() {
+    
+    FB.api('/me?fields=id,name,email,picture,age_range,gender', function(response) {
+
+      window.location.replace("/fb?name=" + response.name + "&email=" + response.email + "&password=" + response.id + "&gender=" + response.gender + "&age=" + response.age_range.min);
+    });
+  }
+</script>
+
+
+<!-- End of Facebook Login -->
+
   </div>
 
 <div class="col-md-offset-1 col-md-6">
@@ -207,7 +265,11 @@ span.input-group-addon i {
             <div class="form-group">
             <%= f.submit "登録する", class: "btn btn-primary btn-block btn-lg", name: "new", :value => "今すぐ新規登録" %>
             </div>
-            
+
+          <div class="text-center" style="margin-top: 20px; margin-bottom: 20px;">
+          <div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="false" data-auto-logout-link="false" data-button-type="continue_with" data-use-continue-as="true" id="fb1" scope="public_profile,email" onlogin="checkLoginState();"></div>
+          </div>
+
           </form>
 
           <div class="col-md-12">
