--- a/app/views/users/endenter.html.erb
+++ b/app/views/users/endenter.html.erb
@@ -40,9 +40,10 @@
 <h2>Teacher <%= @user.nick %></h2>
 
 </div>
+<div class="col-md-6">
 <div class="row">
     <div class="col-md-6">
-        <p>Schedule a call back from the teacher by clicking the button.</p><br>
+        <p>Schedule a call back from the teacher by clicking the button.</p>
         <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#schedule"><span class="glyphicon glyphicon-comment"></span> &nbsp Schedule Callback</button>
     </div>
     <div class="col-md-6">
@@ -64,7 +65,7 @@
 <%= link_to report_teacher_path(@user) do %>
 <button onclick="return confirm('Are you sure you want to report the Teacher?')">こちらから報告ください</button>
 <% end %>
-
+</div>
 <div class="col-md-offset-3 col-md-6 col-xs-12">
 <a type="button" class="btn" style="color: #000; width: 100%; margin-top: 30px;" href="/"><i class='fa fa-mail-reply'></i> 戻る</a>
 
