--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -98,7 +98,7 @@
          </p>
       <hr>
 
-       <%= f.hidden_field :busy, :value => "call"%>
+       <%#= f.hidden_field :busy, :value => "call"%>
 
        <% if @user.busy == 'available'  %>
 
