minor fixes on the Facebook API login flow

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -31,7 +31,7 @@
 
   window.fbAsyncInit = function() {
     FB.init({
-      appId      : '263462597523022',
+      appId      : '263462597523022', // test ID: 955071771311591
       cookie     : true,  // enable cookies to allow the server to access 
                           // the session
       xfbml      : true,  // parse social plugins on this page
