updated Time Log to display all records

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -270,6 +270,9 @@
       	<p>Log out and then log back in.</p>
       	<p>Possible Cause: The teacher forgot to logout from the last session</p>
       	<br>
+        <p><strong>2.) Incentive Time is not adding to my account.</strong></p>
+        <p>When you sign in during incentive time, you have make sure that <strong>Time Log</strong> display the Time In and Time Out. If your status is "Available" but no Time In display (during incentive time). It will not be recorded in the system. Possible cause for this is you forgot to click "Unavailable" during your last session. Solution: Click "Unavailable" and hit submit then change the status back to "Available". Your Time Log should now display the Time In.
+        <br>
        </div>
       </div>
 
