--- a/app/views/users/edit2.html.erb
+++ b/app/views/users/edit2.html.erb
@@ -105,18 +105,25 @@
           <% @time_record.each do |t| %>
           <tr>
               <td><%= t.created_at.strftime('%B %e %Y %a') %></td>
+
+              <% if t.time_in.nil? %>
+              <td>No Time In Record</td>
+              <% else %>
               <td><%= t.time_in.strftime('%I:%M %p') %></td>
+
               <% if t.time_out.nil? %>
               <td>No Time Out Record</td>
               <% else %>
               <td><%= t.time_out.strftime('%I:%M %p') %></td>
               <% end %>
+
               <% if t.time_out.present? && t.time_out.present? 
               count_time = (t.time_out - t.time_in) / 1.minutes %>
               <td><%= number_with_precision(count_time, precision: 2) %> mins</td>
               <% else %>
               <td>Unable to Calculate Time!</td>
               <% end %>
+              
           </tr>
           <% end %>
         </table>
