--- a/app/views/users/endenter.html.erb
+++ b/app/views/users/endenter.html.erb
@@ -42,6 +42,35 @@
 </div>
 
 <div class="col-md-6" style="margin-bottom: 30px;">
+
+<div class="col-md-12">
+<% if @current_user.skype.nil? || @current_user.skype.empty? %>
+
+<p><strong>Hi, we noticed that you don't have a Skype ID saved in Timee</strong></p>
+
+<p>Before you can start a class, you need to update your Skype ID. If you don't have a Skype ID, you can sign up for free by <a href="#" onclick="window.open('https://www.skype.com/ja/');return false;" style="color:red">clicking this link</a> or https://www.skype.com/ja/</p>
+<%= form_for(@current_user) do |f| %>
+       <div class="form-group">
+              <label for="skype" class="cols-md-2 control-label hidden-xs">Skype ID<small style="color: red">*</small></label>
+              <div class="cols-md-10">
+                <div class="input-group">
+                  <span class="input-group-addon hidden-xs"><i class="fa fa-skype" style="color:#948c8c" aria-hidden="true"></i></span>
+                   <% f.hidden_field :current_user_id, :value => @current_user.id %>
+                   <%= f.text_field :skype, class: 'form-control', :placeholder => 'Skype ID' %>
+                </div>
+              </div>
+            </div>
+
+      <div class="form-group">
+            <%= f.submit "Submit", class: "btn btn-default btn-lg", name: "skype_update", :value => "Submit" %>
+            </div>
+<% end %>
+<% else %>
+
+</div>
+
+
+
     <div class="col-md-6">
         <p>日時を指定して先生と英会話できます。</p>
         <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#schedule"><i class="glyphicon glyphicon-comment"></i> &nbsp 申し込む</button>
@@ -99,13 +128,12 @@
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         </div>
       </div>
-      
+    
     </div>
   </div>
 
-
 </div>
-
+<% end %>
 <script>
 <!--
 if (window.name != "xsyz")
@@ -117,5 +145,6 @@ window.name = "xsyz";
 
 //-->
 </script>
-
+</div>
+</div>
 <div style="clear: both; height:100px;"> </div>
