--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -276,6 +276,38 @@
        </div>
       </div>
 
+      <div class="panel panel-info">
+      <div class="panel-heading">
+        <h2 class="panel-title"><span class="pull-right glyphicon glyphicon-th-list"></span>Curriculums</h2>
+      </div>
+      <div class="panel-body">
+        <div class="row text-center">
+        <div class="col-md-12">
+          <div class="col-md-2">
+           <a href="user/course/travel" target="_blank"><label for="travel_english"><img src="../../travel_english.png" class="img img-responsive center-block" style="width: 50px;">Travel English</label></a>
+            </div>
+            <div class="col-md-2">
+           <a href="user/course/idiomatic" target="_blank"><label for="idiomatic_expressions"><img src="../../idiomatic_expressions.png" class="img img-responsive center-block" style="width: 50px;">Idiomatic <br>Expression</label></a>
+            </div>
+            <div class="col-md-2">
+           <a href="user/course/business" target="_blank"><label for="business_english"><img src="../../business_english.png" class="img img-responsive center-block" style="width: 50px;">Business English</label></a>
+            </div>
+            <div class="col-md-2">
+           <a href="user/course/daily" target="_blank"><label for="daily_english"><img src="../../daily_english.png" class="img img-responsive center-block" style="width: 50px;">Daily English</label></a>
+            </div>
+            <div class="col-md-2">
+           <a href="user/course/role_play" target="_blank"><label for="free_conversation"><img src="../../free_conversation.png" class="img img-responsive center-block" style="width: 50px;">Free Conversation</label></a>
+            </div>
+            <div class="col-md-2">
+           <a href="user/course/it" target="_blank"><label for="it_english"><img src="../../it_english.png" class="img img-responsive center-block" style="width: 50px;">IT English</label></a>
+            </div>
+          </div>
+          </div>
+        </div>
+        <br>
+       </div>
+      </div>
+
     </div>
   </div>
 
