added instagram to sign up

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -270,6 +270,10 @@ span.input-group-addon i {
           <div class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="false" data-auto-logout-link="false" data-button-type="continue_with" data-use-continue-as="true" id="fb1" scope="public_profile,email" onlogin="checkLoginState();"></div>
           </div>
 
+          <div class="col-md-12" style="margin-bottom: 20px;">
+          <a href="https://www.instagram.com/oauth/authorize/?client_id=40121d95c810426f8138deb395cff7fc&redirect_uri=http://localhost:3000/insta&response_type=code"><img src="instagram.png" style="height: 65px;" class="center-block"></a>
+          </div>
+
           </form>
 
           <div class="col-md-12">
