changed url for production and fixed auto login using instagram if the user choose the route of login

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -271,7 +271,7 @@ span.input-group-addon i {
           </div>
 
           <div class="col-md-12" style="margin-bottom: 20px;">
-          <a href="https://www.instagram.com/oauth/authorize/?client_id=40121d95c810426f8138deb395cff7fc&redirect_uri=http://localhost:3000/insta&response_type=code"><img src="instagram.png" style="height: 65px;" class="center-block"></a>
+          <a href="https://www.instagram.com/oauth/authorize/?client_id=40121d95c810426f8138deb395cff7fc&redirect_uri=http://timee-online.com/insta&response_type=code"><img src="instagram.png" style="height: 65px;" class="center-block"></a>
           </div>
 
           </form>
