--- a/app/views/users/edit2.html.erb
+++ b/app/views/users/edit2.html.erb
@@ -210,6 +210,7 @@
       <th class="info text-center col-md-3">Student Notes</th>
       <th class="info text-center col-md-2">Topic</th>     
       <th class="info text-center col-md-2">Status</th>
+      <th class="info text-center col-md-2">Callback</th>
       <th class="info text-center col-md-1">Del</th>
       </tr>
       </thead>
@@ -219,7 +220,7 @@
           <% @student_name_h = safe.student %>
           <td><%= safe.id %></td>
           <td><%= (safe.created_at).strftime("%I:%M%p") + ' ~ ' + time_ago_in_words(safe.created_at) %></td>
-          <td><%= safe.student %><%= link_to student_class_path(safe.student), :target => '_blank' do %> <button class="btn btn-warning">Student History</button> <% end %></td>
+          <td><%= safe.student %><%= link_to student_class_path(safe.student), :target => '_blank' do %> <button class="btn btn-warning" disabled>Student History</button> <% end %></td>
           <% @p = "\"" + safe.student + "\"" %>
           <% @id = User.find_by(name: safe.student) %>
           <% if @id.time.nil? %>
@@ -245,6 +246,8 @@
           <% if @id.time < 15 %>
           <td>Not enough time</td>
 
+          <td></td>
+
           <td>
           <%= link_to delete_safes_path(safe), :class => "btn btn-primary",  :style => "color: #fff;", :onclick =>"return confirm('Are you sure?')" do %>
           <i class="fa fa-trash"></i>
@@ -257,6 +260,15 @@
           <%= link_to edit_safe_path(safe), :class => "btn btn-primary" do %>
           <span style="color:#fff;"><i class="fa fa-pencil-square-o"></i><span class="hidden-xs">&nbsp;Process</span></span>
           </td>
+          <% end %>
+
+          <% if @id.skype.blank? %>
+          <td>No Skype ID</td>
+
+          <% else %>
+
+          <td><a href="skype:<%= @id.skype %>" style=" style=color:#ffff;"><i class="fa fa-skype btn btn-primary"></i></a><p>Skype: <%= @id.skype %></td>
+
           <% end %>
 
           <td>
