add alert option for teachers*

--- a/app/views/users/edit2.html.erb
+++ b/app/views/users/edit2.html.erb
@@ -22,6 +22,15 @@
       </div>
     </div>
 
+    <div class="panel panel-success">
+      <div class="panel-heading">
+        <h2 class="panel-title"><span class="pull-right fa fa-comment"></span>Requests</h2>
+      </div>
+      <div class="panel-body">
+        
+      </div>
+    </div>
+
 </div>
 
   <div class="col-md-3">
