logn and signup edit

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,6 +4,7 @@
     <link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
@@ -214,16 +215,6 @@ span.input-group-addon i {
               </div>
             </div>
 
-<!--             <div class="form-group">
-              <label for="username" class="cols-md-2 control-label hidden-xs">スカイプID<small style="color: red">*</small></label>
-              <div class="cols-md-10">
-                <div class="input-group">
-                  <span class="input-group-addon hidden-xs"><i class="fa fa-skype" style="color:#948c8c" aria-hidden="true"></i></span>
-                  <%= f.text_field :skype, class: 'form-control', :placeholder => 'スカイプID', :required => ''  %>
-                </div>
-              </div>
-            </div> -->
-
             <div class="form-group">
               <label for="password" class="cols-md-2 control-label hidden-xs">パスワード<small style="color: red">*</small></label>
               <div class="cols-md-10">
@@ -277,6 +268,10 @@ span.input-group-addon i {
           </div>
 
         </div>
+
+
+
+
 
         <div class="modal fade" id="agreement" role="dialog">
     <div class="modal-dialog modal-lg">
@@ -446,10 +441,73 @@ span.input-group-addon i {
       </div>
       </div>
     </div>
+<div class="col-md-5" style="background-image: url('../../profile_back.jpg');"><br><br><br><br><br>
+          <p class="text-center"><img src="../../logo02.png" width="50%"></p> <br><br><br>
+
+          <b><p style="color: white;">Some Japanese Text here blabla</p></b><br>
+          <button type="button" class="btn btn-danger btn-block">Danger</button><br><br><br>
+        </div>
+
+
+
+
+
+
+        <div class="col-md-7" style="background-color: white;">
+
+          <div class="w3-bar w3-black" style="margin-top: 20px;">
+            <div class="w3-bar-item w3-hover-white w3-button w3-mobile">SOME JAPANESE TEXT HERE</div>
+            <div class="w3-bar-item w3-hover-white w3-button w3-mobile w3-right">Another Japanese Text Here</div>
+          </div><br><br><br>
+          <div class="col-md-6">
+          <div class="form-group mmobile">
+                <div class="input-group">
+                  <span class="input-group-addon hidden-xs"><i class="fa fa-user fa" style="color:#948c8c" aria-hidden="true"></i></span>
+                  <input type="email" class="form-control" name="email" placeholder="メールアドレス"> <br>    
+                </div>
+            </div><br>
+            <div class="form-group mmobile">
+                <div class="input-group">
+                  <span class="input-group-addon hidden-xs"><i class="fa fa-lock fa" style="color:#948c8c" aria-hidden="true"></i></span>
+                  <input type="password" class="form-control" name="password" placeholder="Passowrd"> <br>            
+                </div>
+            </div><br>
+            </div>
+            <div class="col-md-6">
+          <div class="form-group mmobile">
+                <div class="input-group">
+                  <span class="input-group-addon hidden-xs"><i class="fa fa-lock fa" style="color:#948c8c" aria-hidden="true"></i></span>
+                  <input type="email" class="form-control" name="email" placeholder="メールアドレス"> <br>    
+                </div><br>
+            </div>
+            <div class="form-group mmobile">
+                <div class="input-group">
+                  <span class="input-group-addon hidden-xs"><i class="fa fa-lock fa" style="color:#948c8c" aria-hidden="true"></i></span>
+                  <input type="password" class="form-control" name="password" placeholder="Passowrd"> <br>            
+                </div><br>
+            </div>
+            </div>
+            <br><br>
+            <p>
+
+                  <label><input type="checkbox" value="agree" name="agreement" required autofocus>私は <a href="#" style="color: blue;" data-toggle="modal" data-target="#agreement">利用規約</a> を理解し、同意します。</label>
+
+            <div class="col-md-12">
+            <button type="button" class="btn btn-success btn-block">Login</button></div><br><br>
+            <div class="col-md-12">
+            <button type="button" class="btn btn-info btn-block">Facebook Login</button></div><br><br><br>
+            
+          </div>
+        </div> -
+
+
 
 </div>
 
 <% end %>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+
 
   </div>
 </div>
